--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.5 <3.0.0"
+  sdk: ^3.0.0
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,6 +37,15 @@ dependencies:
   ffi: ^2.0.1
   flutter_rust_bridge: ^1.45.0
   meta: ^1.8.0
+  shared_preferences: ^2.1.1
+  path_provider: ^2.0.15
+  window_manager: ^0.3.4
+  flutter_animate: ^4.1.1+1
+  go_router: ^7.1.1
+  # flutter_secure_storage: 8.0.0
+  # msix: 3.14.1
+  # system_tray: 2.0.3
+  # flutter_local_notifications: 14.1.1
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +57,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  ffigen: ^7.2.4
+  ffigen: ^8.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
