--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   window_manager: ^0.3.4
   flutter_animate: ^4.1.1+1
   go_router: ^7.1.1
+  url_launcher: ^6.1.11
   # flutter_secure_storage: 8.0.0
   # msix: 3.14.1
   # system_tray: 2.0.3
